--- a/blocks/info/info.css
+++ b/blocks/info/info.css
@@ -5,3 +5,17 @@
 @import url(./__text-block/info__text-block.css);
 
 
+.info {
+    display: grid;
+    grid-template-areas: 
+    'avatar name edit-bttn add-bttn'
+    'avatar job - -';
+    grid-template-columns: 120px min-content 24px 1fr;
+    grid-template-rows: repeat(2, 1fr);
+}
+
+@media screen and (max-width: 800px) {
+    .info {
+
+    }
+}
