--- a/blocks/info/info.css
+++ b/blocks/info/info.css
@@ -10,8 +10,11 @@
     grid-template-areas: 
     'avatar name edit-bttn add-bttn'
     'avatar job - -';
-    grid-template-columns: 120px min-content 24px 1fr;
+    grid-template-columns: 120px min-content 42px 1fr;
     grid-template-rows: repeat(2, 1fr);
+    justify-content: space-between;
+    width: 100%;
+    margin: 0 0 0 8px;
 }
 
 @media screen and (max-width: 800px) {
