--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,3 +1,10 @@
 .header__logo {
     margin: 45px 0 0;
 }
+
+@media screen and (max-width: 750px) {
+    .header__logo {
+        margin: 28px 0 0;
+        padding: 0 20px;
+    }
+}
