--- a/blocks/wrapper/wrapper.css
+++ b/blocks/wrapper/wrapper.css
@@ -5,3 +5,9 @@
     flex-direction: column;
     margin: 0 auto;
 }
+
+@media screen and (max-width: 750px) {
+    .wrapper {
+        padding: 0;
+    }
+}
