--- a/blocks/header/__underline/header__underline.css
+++ b/blocks/header/__underline/header__underline.css
@@ -5,6 +5,7 @@
 @media screen and (max-width: 750px) {
     .header__underline {
         margin: 31px auto 0;
+        max-width: 90vw;
         color: #545454;
     }
 }
