--- a/style.css
+++ b/style.css
@@ -10,4 +10,6 @@
 @import url(./blocks/profile/profile.css);
 @import url(./blocks/root/root.css);
 @import url(./blocks/wrapper/wrapper.css);
-
+@import url(./blocks/footer/footer.css);
+@import url(./blocks/popup/popup.css);
+@import url(./blocks/info-edit/info-edit.css);
