--- a/blocks/info/__job/info__job.css
+++ b/blocks/info/__job/info__job.css
@@ -10,6 +10,9 @@
 
     grid-area: job;
 
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 @media screen and (max-width: 750px) {
