--- a/blocks/popup/__field/popup__field.css
+++ b/blocks/popup/__field/popup__field.css
@@ -2,8 +2,9 @@
 
     padding: 0;
     margin: 0;
-    border: 0 none;
+    border: none;
     display: block;
+    outline: none;
 
     width: 100%;
     height: 27px;
@@ -19,5 +20,6 @@
 
 .popup__field::placeholder {
     color: #000000;
-    opacity: 1;
+    opacity: 0.7;
+    border: none;
 }
