--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -3,12 +3,26 @@
 @import url(./__field/popup__field.css);
 @import url(./__container/popup__container.css);
 @import url(./_closed/popup_closed.css);
+@import url(./__pic-container/popup__pic-container.css);
+@import url(./__pic-info/popup__pic-info.css);
+@import url(./__pic/popup__pic.css);
+
 
 .popup {
     position: fixed;
     top: 0;
     left: 0;
+    bottom: 0;
+    right: 0;
     height: 100%;
     width: 100%;
-    background-color: rgba(0, 0, 0, .8);
+    background-color: rgba(0, 0, 0, .8);   
+    transition: .55s opacity, .55s visibility;
+
 }
+
+.popup > .popup_closed {
+    opacity: 1;
+    visibility: visible;
+}
+
