--- a/style.css
+++ b/style.css
@@ -13,3 +13,4 @@
 @import url(./blocks/footer/footer.css);
 @import url(./blocks/popup/popup.css);
 @import url(./blocks/info-edit/info-edit.css);
+@import  url(./blocks/focus/focus.css);
