--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -2,8 +2,9 @@
     position: absolute;
     margin: auto;
     max-width: 430px;
-    max-height: 330px;
+    max-height: 350px;
     border-radius: 5px;
+    z-index: 2;
     background-color: #ffffff;
     top: 0;
     left: 0;
