--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -6,6 +6,8 @@
 @import url(./__pic-container/popup__pic-container.css);
 @import url(./__pic-info/popup__pic-info.css);
 @import url(./__pic/popup__pic.css);
+@import url(./__field-error/_show-error/popup__field-error_show-error.css);
+@import url(./__field-error/popup__field-error.css);
 
 
 .popup {
