--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,11 +1,11 @@
 @import url(./__close-button/popup__close-button.css);
-@import url(./__close-button-img/popup__close-button-img.svg);
+/* @import url(./__close-button-img/popup__close-button-img.svg); */
 @import url(./__field/popup__field.css);
 @import url(./__container/popup__container.css);
 @import url(./_closed/popup_closed.css);
-@import url(./__pic-container/popup__pic-container.css);
-@import url(./__pic-info/popup__pic-info.css);
-@import url(./__pic/popup__pic.css);
+/* @import url(./__pic-container/popup__pic-container.css); */
+/* @import url(./__pic-info/popup__pic-info.css); */
+/* @import url(./__pic/popup__pic.css); */
 @import url(./__field-error/_show-error/popup__field-error_show-error.css);
 @import url(./__field-error/popup__field-error.css);
 
