--- a/main.css
+++ b/main.css
@@ -39,7 +39,7 @@
 
 .focus__info{color:#fff;font-family:Inter,Arial,Helvetica,sans-serif;font-size:12px;font-weight:400;margin:10px 0 0;padding:0}
 .focus__container{align-items:center;bottom:0;display:grid;grid-template-columns:-webkit-min-content;grid-template-columns:min-content;grid-template-rows:repeat(3,-webkit-min-content);grid-template-rows:repeat(3,min-content);justify-content:center;left:0;position:fixed;right:0;top:10%;z-index:2}
-.focus__img{margin:auto;max-height:75vw;max-width:75vw;padding:0}
+.focus__img{margin:auto;max-height:75vh;max-width:75vw;padding:0}
 .focus__close-bttn{margin:0 -50px -10px auto}
 .popup_closed{opacity:0;transition:opacity .55s,visibility .55s;visibility:hidden}
 .focus{background-color:rgba(0,0,0,.8);height:100%;left:0;position:fixed;top:0;transition:opacity .55s,visibility .55s;width:100%}.focus>.popup_closed{opacity:1;visibility:visible}
