finish html and css update

--- a/src/blocks/card/card.css
+++ b/src/blocks/card/card.css
@@ -3,6 +3,10 @@
 @import url(./__like-icon/card__like-icon.css);
 @import url(./__place/card__place.css);
 @import url(./__bin-icon/card__bin-icon.css);
+@import url(./__like-container/card__like-container.css);
+@import url(./__like-counter/card__like-counter.css);
+@import url(./__like-icon_hidden/card__like-icon_hidden.css);
+
 
 .card {
     border-radius: 10px;
