--- a/src/blocks/info-edit/info-edit.css
+++ b/src/blocks/info-edit/info-edit.css
@@ -3,3 +3,5 @@
 @import url(./__job/info-edit__job.css);
 @import url(./__name/info-edit__name.css);
 @import url(./__submit/info-edit__submit.css);
+@import url(./__avatar-container/info__avatar-container.css);
+@import url(./__avatar-edit-pic/info__avatar-edit-pic.css);
