--- a/src/blocks/popup/__container/popup__container.css
+++ b/src/blocks/popup/__container/popup__container.css
@@ -17,3 +17,11 @@
         margin: auto 19px;
     }
 }
+
+.popup__container.popup__delete-card-container {
+    max-height: 181px;
+}
+
+.popup__container.popup__edit-avatar {
+    max-height: 272px;
+}
