--- a/src/blocks/popup/popup.css
+++ b/src/blocks/popup/popup.css
@@ -16,7 +16,7 @@
     width: 100%;
     background-color: rgba(0, 0, 0, .8);   
     transition: .55s opacity, .55s visibility;
-
+    z-index: 4;
 }
 
 .popup > .popup_closed {
