finish api part

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -14,3 +14,4 @@
 @import url(../blocks/popup/popup.css);
 @import url(../blocks/info-edit/info-edit.css);
 @import  url(../blocks/focus/focus.css);
+@import url(../blocks/preloader/preloader.css);
