--- a/main.css
+++ b/main.css
@@ -3,10 +3,13 @@
 .add-button{grid-area:add-bttn;margin:0 0 0 auto;width:150px}@media screen and (max-width:750px){.add-button{margin:36px auto 0}}.add-button:hover{opacity:.5;transition-duration:.5s}
 .card-grid{grid-gap:17px;display:grid;grid-template-columns:repeat(auto-fill,282px);grid-template-rows:repeat(auto-fill,361px);justify-content:center;margin:50px auto 0}
 .card__img{border-top-left-radius:10px;border-top-right-radius:10px;height:282px;-o-object-fit:cover;object-fit:cover;width:282px}
-.card__info{display:flex;flex-direction:row;justify-content:space-between;margin:25px auto 31px;max-width:87%}
+.card__info{display:flex;flex-direction:row;justify-content:space-between;margin:22px auto 31px;max-width:87%}
 .card__like-icon:hover{opacity:.5;transition-duration:.5s}
-.card__place{color:#000;font-family:Inter;font-size:24px;font-style:normal;font-weight:900;line-height:29px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}
+.card__place{color:#000;font-family:Inter;font-size:24px;font-style:normal;font-weight:900;line-height:29px;margin:4px 0 0;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}
 .card__bin-icon{box-shadow:inset 0 0 12px 8px rgba(0,0,0,.02);margin-bottom:-25px;position:relative;right:-250px;top:-272px}.card__bin-icon:hover{opacity:.5;transition-duration:.5s}
+.card__like-container{display:flex;flex-direction:column}
+.card__like-counter{color:#000;font-family:Inter;font-size:13px;font-style:normal;font-weight:400;line-height:16px;margin:4px 0 0;text-align:center}
+.card__like-icon_hidden{display:none}
 .card{background-color:#fff;border-radius:10px;height:361px;width:282px}
 .header__logo{margin:45px 0 0}@media screen and (max-width:750px){.header__logo{margin:28px 0 0;padding:0 20px}}
 .header__underline{margin:45px auto 0}@media screen and (max-width:750px){.header__underline{color:#545454;margin:31px auto 0;max-width:90vw}}
@@ -24,18 +27,20 @@
 .footer__copyright{color:#545454;font-family:Inter;font-size:18px;font-style:normal;font-weight:400;line-height:22px}
 .footer{margin:68px auto 60px;width:100%}
 .popup__close-button{background:none;border:none;display:block;height:40px;outline:none;padding:0;position:absolute;right:-35px;top:-35px;width:40px}@media screen and (max-width:510px){.popup__close-button{right:-10px;top:-40px}}
-.popup__field{border:none;border-bottom:1px solid rgba(0,0,0,.2);display:block;font-family:inherit;font-size:inherit;font-style:inherit;font-weight:inherit;height:27px;line-height:inherit;margin:0;outline:none;padding:0;width:100%}.popup__field:focus{border:1px solid rgba(0,0,0,.3)}.popup__field::-moz-placeholder{border:none;color:#000;opacity:.7}.popup__field:-ms-input-placeholder{border:none;color:#000;opacity:.7}.popup__field::placeholder{border:none;color:#000;opacity:.7}
-.popup__container{background-color:#fff;border-radius:5px;bottom:0;left:0;margin:auto;max-height:350px;max-width:430px;position:absolute;right:0;top:0;z-index:2}@media screen and (max-width:510px){.popup__container{margin:auto 19px}}
+.popup__field{border:none;border-bottom:1px solid rgba(0,0,0,.2);display:block;font-family:inherit;font-size:inherit;font-style:inherit;font-weight:inherit;height:27px;line-height:inherit;margin:0;outline:none;padding:0;width:100%}.popup__field:focus{border:1px solid rgba(0,0,0,.3)}.popup__field::-moz-placeholder{border:none;color:#000;opacity:.7}.popup__field:-ms-input-placeholder{border:none;color:#000;opacity:.7}.popup__field::placeholder{border:none;color:#000;opacity:.7}.popup__edit-avatar .popup__field{margin-top:50px}
+.popup__container{background-color:#fff;border-radius:5px;bottom:0;left:0;margin:auto;max-height:350px;max-width:430px;position:absolute;right:0;top:0;z-index:2}@media screen and (max-width:510px){.popup__container{margin:auto 19px}}.popup__container.popup__delete-card-container{max-height:181px}.popup__container.popup__edit-avatar{max-height:272px}
 .popup_closed{opacity:0;transition:opacity .55s,visibility .55s;visibility:hidden}
 .popup__field-error.popup__field-error_show-error{display:block}
 .popup__field-error{border-top:1px solid red;color:red;display:block;display:none;font-family:inherit;font-size:12px;line-height:inherit;margin-bottom:-25px;margin-top:-1px}
-.popup{background-color:rgba(0,0,0,.8);bottom:0;height:100%;left:0;position:fixed;right:0;top:0;transition:opacity .55s,visibility .55s;width:100%}.popup>.popup_closed{opacity:1;visibility:visible}
+.popup{background-color:rgba(0,0,0,.8);bottom:0;height:100%;left:0;position:fixed;right:0;top:0;transition:opacity .55s,visibility .55s;width:100%;z-index:4}.popup>.popup_closed{opacity:1;visibility:visible}
 .info-edit{margin:34px 36px 0}
 .info-edit__header{font-family:Inter;font-size:24px;font-style:normal;font-weight:900;line-height:29px}@media screen and (max-width:510px){.info-edit__header{font-size:18px;line-height:22px}}
 .info-edit__job{font-family:Inter;font-size:14px;font-style:normal;font-weight:400;line-height:17px;margin:30px 0 0}
 .info-edit__name{font-family:Inter;font-size:14px;font-style:normal;font-weight:400;line-height:17px;margin:54px 0 0}@media screen and (max-width:510px){.info-edit__name{margin:34px 0 0}}
 .info-edit__submit.info-edit__submit_enabled{background-color:#000;border:0;color:#fff}.info-edit__submit.info-edit__submit_enabled:hover{opacity:.5;transition-duration:.5s}
 .info-edit__submit{background-color:#fff;border:1px solid rgba(0,0,0,.1);border-radius:2px;bottom:0;color:rgba(0,0,0,.3);display:block;font-family:Inter;font-size:18px;font-style:normal;font-weight:400;height:50px;line-height:22px;margin:48px 0 37px;position:absolute;text-align:center;width:83%}@media screen and (max-width:415px){.info-edit__submit{width:70%}}
+.info__avatar-container{border-radius:50%;grid-area:avatar;position:relative;z-index:2}.info__avatar-container:hover{background:rgba(0,0,0,.8);transition-duration:.5s}.info__avatar-container:hover .info__avatar-edit-pic{opacity:1;transition:opacity .7s}
+.info__avatar-edit-pic{bottom:0;height:26px;left:0;margin:auto;opacity:0;position:absolute;right:0;top:0;width:26px}
 
 .focus__info{color:#fff;font-family:Inter,Arial,Helvetica,sans-serif;font-size:12px;font-weight:400;margin:10px 0 0;padding:0}
 .focus__container{align-items:center;bottom:0;display:grid;grid-template-columns:-webkit-min-content;grid-template-columns:min-content;grid-template-rows:repeat(3,-webkit-min-content);grid-template-rows:repeat(3,min-content);justify-content:center;left:0;position:fixed;right:0;top:10%;z-index:2}
@@ -43,4 +48,6 @@
 .focus__close-bttn{margin:0 -50px -10px auto}
 .popup_closed{opacity:0;transition:opacity .55s,visibility .55s;visibility:hidden}
 .focus{background-color:rgba(0,0,0,.8);height:100%;left:0;position:fixed;top:0;transition:opacity .55s,visibility .55s;width:100%}.focus>.popup_closed{opacity:1;visibility:visible}
+.preloader__item{-webkit-animation:spin 2s linear infinite;animation:spin 2s linear infinite;border:4px solid;border-color:#444 #444 #888;border-radius:50%;display:block;height:50px;margin:50px auto;position:static;width:50px}@-webkit-keyframes spin{to{transform:rotate(1turn)}}@keyframes spin{to{transform:rotate(1turn)}}
+.preloader{display:block;grid-column:1/span 3;margin:0 auto;position:relative}@media screen and (max-width:936px){.preloader{display:block;grid-column:1/span 2;margin:0 auto;position:relative}}@media screen and (max-width:598px){.preloader{display:block;grid-column:1/span 1;margin:0 auto;position:relative}}
 
